2012-12-08  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: mkvmerge will now keep timecodes of PCM
	tracks from source files if they're available. Fixes #804.

2012-12-05  Moritz Bunkus  <moritz@bunkus.org>

	* all: bug fix: EBML void elements will be skipped when reading
	structures from XML (e.g. chapters). Fixes #802.

2012-12-02  Moritz Bunkus  <moritz@bunkus.org>

	* all: bug fix: EBML void elements will be skipped when saving
	structures to XML (e.g. chapters). Fixes #801.

	* mkvmerge: bug fix: Fixed reading linked seek heads in Matroska
	files.

2012-11-13  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: bug fix: Fixed reading file names containing a '%' from a
	.mmg settings file (both normally saved files and the job queue
	files). Fixes #795.

2012-10-08  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: enhancement: Dirac video code: Added four more
	pre-defined video types from Dirac spec v2.2.2 and two from Dirac
	Pro.

2012-09-27  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge, mmg: enhancement: Added options for turning off
	writing "CueDuration" elements ("--engage no_cue_duration") and
	"CueRelativePosition" elements ("--engage
	no_cue_relative_positions").

	* mkvmerge: new feature: The element "CueRelativePosition" is
	written for all cue entries.

	* mkvmerge: new feature: The element "CueDuration" will be written
	for all cue entries referring to subtitle tracks.

	* mkvmerge: new feature: mkvmerge will write cues for subtitle
	tracks by default now.

	* mkvinfo: new feature: added support for the new elements
	CueDuration, CueRelativePosition and TimecodeScaleDenimonator. The
	denominator's value is only shown so far but not taken into
	account when calculating any timecode.

	* mkvpropedit, mmg, mkvmerge: removal: removed support for the
	deprecated element TrackTimecodeScale.

2012-09-02  Moritz Bunkus  <moritz@bunkus.org>

	* Released v5.8.0.

	* Build system: dropped support for gcc 4.6.0.
