@@ -1,5 +1,8 @@
 2012-12-08  Moritz Bunkus  <moritz@bunkus.org>
 
+	* mkvmerge: bug fix: Fixed appending non-empty tracks to empty
+	tracks. Fixes #793.
+
 	* mkvmerge: bug fix: mkvmerge will now keep timecodes of PCM
 	tracks from source files if they're available. Fixes #804.
 
